[project]
name = "rl-qc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gymnasium>=1.2.3",
    "matplotlib>=3.10.8",
    "networkx>=3.6.1",
    "numpy>=2.4.2",
    "pipreqs>=0.5.0",
    "qiskit>=2.3.0",
    "qiskit-aer>=0.17.2",
    "qiskit-ibm-runtime>=0.45.1",
    "sb3-contrib>=2.7.1",
    "stable-baselines3>=2.7.1",
]
